# miniIOSSDKDemo

./: .gitignore  README.md  build.sh
AVEngine/: AVEngine.cpp  AVEngine.h  AVEngine.mm  CMakeLists.txt
AVEngine/include/ffmpeg/libavcodec/: codec_id.h  packet.h
AVEngine/include/ffmpeg/libavformat/: application.h  dns_cache.h  url.h
AVEngine/include/ffmpeg/libavutil/: dict.h  ffversion.h
AVEngine/include/ffmpeg/libffmpeg/: config.h  config_components.h
miniIOSApp/FrameWork/AVEngine.framework/Modules/: module.modulemap
miniIOSApp/miniIOSApp/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
miniIOSApp/miniIOSApp.xcodeproj/: project.pbxproj
miniIOSApp/miniIOSApp.xcodeproj/project.xcworkspace/xcuserdata/coollyn.xcuserdatad/: UserInterfaceState.xcuserstate
miniIOSApp/miniIOSApp.xcodeproj/xcuserdata/coollyn.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
miniIOSApp/miniIOSApp.xcodeproj/xcuserdata/coollyn.xcuserdatad/xcschemes/: xcschememanagement.plist
